# refter-cli

./: .pylint.ini  Makefile  README.md  pyproject.toml
.github/workflows/: workflow.yml
refter/: __init__.py  cli.py  constants.py  types.py
refter/tests/: test_utils.py
refter/tests/fixtures/: manifest.json  manifest_bad_refs.json
refter/utils/: deploy.py  validation.py
